force-app/main/default/objects/RGC_Pharmacogenetics__c/RGC_Pharmacogenetics__c.object-meta.xml
<CustomObject>
    <label>RGC Pharmacogenetics</label>
    <nameField>
        <displayFormat>PGx-{00}</displayFormat>
        <label>RGC Pharmacogenetic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RGC Pharmacogenetics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>