force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/CES_Study__c.field-meta.xml
<CustomField>
    <fullName>CES_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CES Study</label>
    <type>Checkbox</type>
</CustomField>