force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>