force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <label>Disease</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>