force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Outcome_Details__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Details__c</fullName>
    <label>Outcome Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>