force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Patient_Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Patient_Age_Group__c</fullName>
    <label>Patient Age Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>