force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Patient_Population__c.field-meta.xml
<CustomField>
    <fullName>Patient_Population__c</fullName>
    <label>Patient Population</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>