force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Primary_Tested_Drug__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tested_Drug__c</fullName>
    <label>Primary Tested Drug</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fasinumab</fullName>
            </value>
            <value>
                <fullName>NTLA-2001</fullName>
            </value>
            <value>
                <fullName>dupilumab (SC)
itepekimab</fullName>
            </value>
            <value>
                <fullName>evinacumab</fullName>
            </value>
            <value>
                <fullName>rinucumab</fullName>
            </value>
            <value>
                <fullName>HPV vaccine, ISA Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>REGN-5069</fullName>
            </value>
            <value>
                <fullName>garetosmab</fullName>
            </value>
            <value>
                <fullName>REGN-5381
REGN-9035</fullName>
            </value>
            <value>
                <fullName>cemiplimab
fianlimab</fullName>
            </value>
            <value>
                <fullName>motixafortide
cemiplimab</fullName>
            </value>
            <value>
                <fullName>evinacumab (IV)</fullName>
            </value>
            <value>
                <fullName>REGN-5713-5714-5715</fullName>
            </value>
            <value>
                <fullName>dupilumab (IV)</fullName>
            </value>
            <value>
                <fullName>vusolimogene oderparepvec</fullName>
            </value>
            <value>
                <fullName>REGN-5054</fullName>
            </value>
            <value>
                <fullName>REGN-7075</fullName>
            </value>
            <value>
                <fullName>aflibercept ophthalmic solution</fullName>
            </value>
            <value>
                <fullName>undisclosed - immunosuppressive drug
methotrexate
undisclosed – atopic dermatitis drug
dupilumab
cyclosporine, unspecified
corticosteroids
undisclosed-immunomodulator</fullName>
            </value>
            <value>
                <fullName>pexastimogene devacirepvec (IV)
pexastimogene devacirepvec (intratumoral)
cemiplimab</fullName>
            </value>
            <value>
                <fullName>REGN-5458</fullName>
            </value>
            <value>
                <fullName>sarilumab (sc)</fullName>
            </value>
            <value>
                <fullName>isatuximab
cemiplimab</fullName>
            </value>
            <value>
                <fullName>REGN-5459</fullName>
            </value>
            <value>
                <fullName>fianlimab</fullName>
            </value>
            <value>
                <fullName>prednisone
everolimus
sirolimus
cemiplimab</fullName>
            </value>
            <value>
                <fullName>infliximab (iv)
adalimumab (SC)
etanercept (SC)
certolizumab pegol (SC)
golimumab (subcutaneous)
undisclosed - anti-TNF alpha</fullName>
            </value>
            <value>
                <fullName>REGN-9933</fullName>
            </value>
            <value>
                <fullName>odronextamab</fullName>
            </value>
            <value>
                <fullName>cemdisiran
pozelimab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>