force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Primary_Tested_Drug_Target__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tested_Drug_Target__c</fullName>
    <label>Primary Tested Drug: Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>