force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>