force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/SecondaryOther_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>SecondaryOther_Endpoint__c</fullName>
    <label>Secondary/Other Endpoint</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>