force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Study_Design__c.field-meta.xml
<CustomField>
    <fullName>Study_Design__c</fullName>
    <label>Study Design</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>