force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Study_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Study_Keywords__c</fullName>
    <label>Study Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>