force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Supporting_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>Supporting_URL_Link__c</fullName>
    <label>Supporting URL Link</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>