force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Supporting_URLs__c.field-meta.xml
<CustomField>
    <fullName>Supporting_URLs__c</fullName>
    <label>Supporting URLs</label>
    <type>Url</type>
</CustomField>