force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infectious Disease; Vaccines (Infectious Disease)</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Autoimmune/Inflammation</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>Metabolic/Endocrinology; Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease; Oncology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular; Metabolic/Endocrinology</fullName>
            </value>
            <value>
                <fullName>CNS; Metabolic/Endocrinology</fullName>
            </value>
            <value>
                <fullName>Autoimmune/Inflammation; CNS</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Autoimmune/Inflammation; Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Metabolic/Endocrinology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>