force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Trial_Objective__c.field-meta.xml
<CustomField>
    <fullName>Trial_Objective__c</fullName>
    <label>Trial Objective</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>