force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Trial_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Trial_Outcomes__c</fullName>
    <label>Trial Outcomes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>