force-app/main/default/objects/RGC_Pharmacogenetics__c/fields/Trial_Phase__c.field-meta.xml
<CustomField>
    <fullName>Trial_Phase__c</fullName>
    <label>Trial Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>II/III</fullName>
            </value>
            <value>
                <fullName>I/II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>III/IV</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>